Resolve modal button visibility

--- a/mysite/emailer/static/emailer/style.css
+++ b/mysite/emailer/static/emailer/style.css
@@ -51,24 +51,24 @@ input {
 }
 
 .modal-content {
-    color: black;
+    background-color: rgb(255, 255, 255, 0.2);
 }
 
-button.btn-primary {
+#emailInput::placeholder {
+    color: white;
+    opacity: 1; /* Firefox */
+}
+
+button.btn-primary.send-button {
     background-color: transparent;
     border: none;
     padding: 0;
     transition: transform 0.3s ease;
 }
 
-button.btn-primary:hover {
+button.btn-primary.send-button:hover {
     transform: scale(1.2);
 }
-
-button:focus {
-    outline:none;
-    box-shadow: none;
-  }
 
 table {
     border-collapse: collapse;
@@ -93,4 +93,5 @@ th, td {
     color: #fff;
     font-size: medium;
     font-family: Arial, Helvetica, sans-serif;
+    margin-top: 10px;
 }
